--- a/sass/abstracts/_vars.sass
+++ b/sass/abstracts/_vars.sass
@@ -1,6 +1,16 @@
+//Основные цвета
 $brown-color-light: #BA8554
 $brown-color-dark: #A14F03
-$grey-color: #777
-$grey-color-light: #FAFAFA
+$color-grey: #777
+$color-grey-light: #FAFAFA
+$color-black: #000
+$color-white: #fff
+
+//Градиенты
 $gradient-brown-black: linear-gradient(90deg, rgba(186, 133, 84, 0.70) 0.03%, rgba(1, 1, 1, 0.70) 99.94%)
 $gradien-light-brown_dark: linear-gradient(90deg, #C3956A 3.65%, #A14F03 100%)
+
+//Отступы
+$margin-vertical-big: 8rem
+$grid-width: 114rem
+$gutter-gorizontal: 6rem
