--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -9,7 +9,7 @@ html
 body
 	font-family: "Lato", sans-serif
 	font-weight: 400
-	color: $grey-color
+	color: $color-grey
 	font-size: 1.6rem
 	letter-spacing: .2rem
 	transition: all .5s ease-in-out
@@ -20,4 +20,4 @@ body
 .container
 	padding: 5rem
 	margin: 0 auto
-	background-color: $grey-color-light
+	background-color: $color-grey-light
