--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -1,9 +1,9 @@
 .button
 	&:link, &:visited
-		@include style-link($grey-color)
+		@include style-link($color-grey)
 		position: relative
 		align-self: auto
-		background-color: white
+		background-color: $color-white
 		padding: 1.5rem 4rem
 		border-radius: 5rem
 		font-size: 2rem
@@ -26,7 +26,7 @@
 		content: ""
 		width: 100%
 		height: 100%
-		background-color: white
+		background-color: $color-white
 		top: 0
 		left: 0
 		border-radius: 5rem
