--- a/sass/abstracts/_vars.sass
+++ b/sass/abstracts/_vars.sass
@@ -14,3 +14,9 @@ $gradien-light-brown_dark: linear-gradient(90deg, #C3956A 3.65%, #A14F03 100%)
 $margin-vertical-big: 8rem
 $grid-width: 114rem
 $gutter-gorizontal: 6rem
+
+// Тени
+$text-shadow-light: .4rem .4rem 0 rgba(0, 0, 0, .1)
+$text-shadow-dark: .4rem .4rem 0 rgba(0, 0, 0, .5)
+$box-shadow-dark: 0 .4rem .4rem 0 rgba(0, 0, 0, .5)
+$box-shadow-light: 0 .4rem .4rem 0 rgba(0, 0, 0, .1)
