--- a/sass/base/_utilities.sass
+++ b/sass/base/_utilities.sass
@@ -1,1 +1,11 @@
- 
+.text-align-center
+	text-align: center
+
+.margin-bottom-10px
+	margin-bottom: 1rem
+
+.margin-bottom-45px
+	margin-bottom: 4.5rem
+
+.margin-bottom-80px
+	margin-bottom: 8rem
