--- a/sass/layouts/_header.sass
+++ b/sass/layouts/_header.sass
@@ -3,6 +3,7 @@
 	height: 56vh
 	background: $gradient-brown-black, url(../src/images/header.jpeg) center / cover no-repeat
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 84%)
+	margin-bottom: 8rem
 	&__logo
 		position: absolute
 		width: 5.6rem
