--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,8 +7,11 @@
 @import "./base/utilities"
 
 @import "./components/button"
+@import "./components/button-text"
+@import "./components/_composition"
 
 @import "./layouts/_grid"
 @import "./layouts/header"
+@import "./layouts/about"
 
 @import "./pages/home"
