--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -1,21 +1,3 @@
-.title-main
-	color: $color-white
-	&__title
-		display: block
-		text-transform: uppercase
-		margin-bottom: 1rem
-		letter-spacing: 1.1rem
-		animation: leftToRight 1.5s ease .5s
-		animation-fill-mode: backwards
-	&__subtitle
-		display: block
-		font-size: 4rem
-		font-weight: 300
-		letter-spacing: .5rem
-		animation: rightToLeft 1.5s ease .5s
-		margin-bottom: 5rem
-		animation-fill-mode: backwards
-
 h1
 	font-size: 5rem
 	font-style: normal
@@ -27,6 +9,7 @@ h2
 	font-style: normal
 	font-weight: 800
 	letter-spacing: 1rem
+	text-shadow: $text-shadow-light
 
 h3
 	font-size: 2rem
@@ -39,3 +22,41 @@ h4
 	font-style: normal
 	font-weight: 300
 	letter-spacing: .2rem
+
+p
+	font-size: 1.6rem
+	font-weight: 400
+	line-height: 140%
+	letter-spacing: .2rem
+
+
+.title-main
+	color: $color-white
+	&__title
+		display: block
+		text-transform: uppercase
+		margin-bottom: 1rem
+		letter-spacing: 1.1rem
+		animation: leftToRight 1.5s ease .5s
+		animation-fill-mode: backwards
+		backface-visibility: hidden
+	&__subtitle
+		display: block
+		font-size: 4rem
+		font-weight: 300
+		letter-spacing: .5rem
+		animation: rightToLeft 1.5s ease .5s
+		margin-bottom: 5rem
+		animation-fill-mode: backwards
+		backface-visibility: hidden
+
+.title-secondary
+	text-transform: uppercase
+	background: $gradien-light-brown_dark
+	-webkit-background-clip: text
+	color: transparent
+	transition: all .4s
+	animation-fill-mode: backwards
+	backface-visibility: hidden
+	&:hover
+		transform: skewY(2deg) skewX(15deg) scale(1.1)
