--- a/sass/components/_button-text.sass
+++ b/sass/components/_button-text.sass
@@ -16,6 +16,6 @@
 		transform: translateY(-.3rem)
 		box-shadow: $box-shadow-dark
 		& .arrow-icon path
-			fill: #fff
+			fill: $color-white
 	&:active
 		transform: translateY(0)
