Реализовал блок Adventure

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,10 +8,12 @@
 
 @import "./components/button"
 @import "./components/button-text"
-@import "./components/_composition"
+@import "./components/composition"
+@import "./components/card"
 
 @import "./layouts/_grid"
 @import "./layouts/header"
 @import "./layouts/about"
+@import "layouts/adventure"
 
 @import "./pages/home"
