Поправил анимацию карточки

--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -7,7 +7,7 @@
 	transition: all .5s ease
 	box-shadow: $box-shadow-light
 	&:hover
-		transform: translateY(-.5rem)
+		transform: translateY(-1.5rem) scale(1.03)
 		box-shadow: $box-shadow-dark
 	&__icon
 		display: inline-block
