--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,7 +9,7 @@
 @import "./components/button"
 @import "./components/button-text"
 @import "./components/composition"
-@import "./components/card"
+@import "./components/adventure-card"
 
 @import "./layouts/_grid"
 @import "./layouts/header"
