--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,9 +11,11 @@
 @import "./components/composition"
 @import "./components/adventure-card"
 
-@import "./layouts/_grid"
+@import "./layouts/grid"
 @import "./layouts/header"
 @import "./layouts/about"
 @import "layouts/adventure"
+@import "layouts/tours"
+
 
 @import "./pages/home"
