Реализация блока Tours

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,12 +10,6 @@
 @import "./components/button-text"
 @import "./components/composition"
 @import "./components/adventure-card"
-
-@import "./layouts/grid"
-@import "./layouts/header"
-@import "./layouts/about"
-@import "layouts/adventure"
-@import "layouts/tours"
-
+@import "./components/tours-card"
 
 @import "./pages/home"
