Добавление блока Feedback

--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -58,5 +58,7 @@ p
 	transition: all .4s
 	animation-fill-mode: backwards
 	backface-visibility: hidden
+	&_white
+		color: $color-white
 	&:hover
 		transform: skewY(2deg) skewX(15deg) scale(1.1)
