--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,5 +11,6 @@
 @import "./components/composition"
 @import "./components/adventure-card"
 @import "./components/tours-card"
+@import "./components/feedback-card"
 
 @import "./pages/home"
