Реализация блока Book

--- a/sass/abstracts/_vars.sass
+++ b/sass/abstracts/_vars.sass
@@ -5,6 +5,8 @@ $color-grey: #777
 $color-grey-light: #FAFAFA
 $color-black: #000
 $color-white: #fff
+$color-green-light: #66D763
+$color-red-light: #D76363
 
 //Градиенты
 $gradient-brown-black: linear-gradient(90deg, rgba(186, 133, 84, 0.70) 0.03%, rgba(1, 1, 1, 0.70) 99.94%)
