--- a/sass/components/_feedback-card.sass
+++ b/sass/components/_feedback-card.sass
@@ -1,10 +1,10 @@
 .feedback-card
-	display: block
 	background: rgba($color-white, .85)
 	box-shadow: $box-shadow-light
-	padding: 5.5rem 20.7rem 5rem 20.7rem
+	padding: 5.5rem 15.7rem 5rem 15.7rem
 	clip-path: polygon(10% 0%, 100% 0, 90% 100%, 0% 100%)
 	text-align: left
+	margin: 0 4.2rem
 	&__avatar
 		border-radius: 50rem
 		width: 16.7rem
@@ -15,6 +15,7 @@
 		margin-right: 5.3rem
 		position: relative
 		overflow: hidden
+		box-shadow: $box-shadow-light
 	&__image
 		height: 100%
 		transition: all .5s ease
