--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,6 @@
 @import "./components/adventure-card"
 @import "./components/tours-card"
 @import "./components/feedback-card"
+@import "./components/book-form"
 
 @import "./pages/home"
