Реализация блока Footer

--- a/sass/abstracts/_vars.sass
+++ b/sass/abstracts/_vars.sass
@@ -3,6 +3,7 @@ $brown-color-light: #BA8554
 $brown-color-dark: #A14F03
 $color-grey: #777
 $color-grey-light: #FAFAFA
+$color-grey-dark: #333
 $color-black: #000
 $color-white: #fff
 $color-green-light: #66D763
