--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -44,3 +44,6 @@
 		color: $color-white
 		&::after
 			background-color: $brown-color-light
+	&_large-padding
+		&, &:link, &:visited
+			padding: 1.5rem 4rem
