--- a/sass/components/_feedback-card.sass
+++ b/sass/components/_feedback-card.sass
@@ -1,10 +1,12 @@
 .feedback-card
 	background: rgba($color-white, .85)
-	box-shadow: $box-shadow-light
+	box-shadow: $box-shadow-dark
 	padding: 5.5rem 15.7rem 5rem 15.7rem
 	clip-path: polygon(10% 0%, 100% 0, 90% 100%, 0% 100%)
 	text-align: left
 	margin: 0 4.2rem
+	&__container
+		margin-bottom: 9.5rem
 	&__avatar
 		border-radius: 50rem
 		width: 16.7rem
