--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -60,5 +60,5 @@ p
 	backface-visibility: hidden
 	&_white
 		color: $color-white
-	&:hover
+	&_animated:hover
 		transform: skewY(2deg) skewX(15deg) scale(1.1)
