--- a/sass/components/_composition.sass
+++ b/sass/components/_composition.sass
@@ -3,11 +3,14 @@
 	&__photo
 		border-radius: .5rem
 		position: absolute
-		width: 59%
-		transition: all .3s ease
+		width: 64%
+		transition: all .3s ease-out
 		&:hover
-			transform: scale(1.15)
+			transform: scale(1.2)
 			z-index: 2
+			border: .8rem solid $brown-color-light
+			padding: .5rem
+			border-radius: .8rem
 		&_n1
 			top: 0
 			left: 0
@@ -19,4 +22,4 @@
 			top: 8.9rem
 			left: 22.1rem
 	&:hover &__photo:not(:hover)
-			transform: scale(0.8)
+			transform: scale(0.9)
