Реализация блока Burger menu

--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,4 +1,5 @@
 @import "./../layouts/grid"
+@import "./../layouts/burger-menu"
 @import "./../layouts/header"
 @import "./../layouts/about"
 @import "./../layouts/adventure"
